[gd_scene load_steps=19 format=3 uid="uid://bakcigwu1ecip"]

[ext_resource type="Script" path="res://scenes/level2.gd" id="1_jixx2"]
[ext_resource type="Texture2D" uid="uid://d8bjhij8ne3x" path="res://assets/materials/HDR_029_Sky_Cloudy_Bg.jpg" id="2_f3chk"]
[ext_resource type="MeshLibrary" uid="uid://26nfjd80povy" path="res://scenes/terrain.tres" id="3_8carr"]
[ext_resource type="PackedScene" uid="uid://dek68pf3o8v1t" path="res://scenes/character.tscn" id="4_66qe0"]
[ext_resource type="Script" path="res://scenes/FollowScelic.gd" id="5_nc7n1"]
[ext_resource type="PackedScene" uid="uid://c1fo2ga4labv" path="res://scenes/UI.tscn" id="6_bvkyx"]
[ext_resource type="PackedScene" uid="uid://bxwhw56i7piv6" path="res://scenes/platform.tscn" id="8_3m07u"]
[ext_resource type="PackedScene" uid="uid://camav0kvixgm3" path="res://scenes/portal.tscn" id="9_m3vu1"]
[ext_resource type="PackedScene" uid="uid://c7uookggixos4" path="res://scenes/whoosh.tscn" id="10_mk51m"]
[ext_resource type="Script" path="res://scenes/cache_camera.gd" id="10_rvd0w"]
[ext_resource type="PackedScene" uid="uid://cxgew5k8earha" path="res://assets/pan.glb" id="11_7grej"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_gxtmq"]
panorama = ExtResource("2_f3chk")

[sub_resource type="Sky" id="Sky_e6ill"]
sky_material = SubResource("PanoramaSkyMaterial_gxtmq")

[sub_resource type="Environment" id="Environment_84bnq"]
background_mode = 2
sky = SubResource("Sky_e6ill")
ambient_light_source = 3
ssao_enabled = true
ssil_enabled = true
sdfgi_enabled = true
glow_enabled = true
fog_enabled = true
fog_light_color = Color(0.537255, 0.847059, 0.921569, 1)
fog_density = 0.001
volumetric_fog_density = 0.01
volumetric_fog_albedo = Color(1, 1, 0.886275, 1)
volumetric_fog_sky_affect = 0.0
adjustment_enabled = true

[sub_resource type="Animation" id="Animation_jwihf"]
length = 0.001

[sub_resource type="Animation" id="Animation_i7ljx"]
resource_name = "idle"
length = 4.0
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lmysw"]
_data = {
"RESET": SubResource("Animation_jwihf"),
"idle": SubResource("Animation_i7ljx")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_t7kv7"]
size = Vector3(6.02704, 3.40694, 11.9364)

[node name="World" type="Node3D"]
script = ExtResource("1_jixx2")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_84bnq")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.568605, 0.653223, -0.499988, -1.92041e-08, 0.607806, 0.794085, 0.822611, 0.451521, -0.345602, 0, 13.0112, 0)
shadow_enabled = true

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("3_8carr")
cell_size = Vector3(5, 2.5, 10)
cell_center_y = false
cell_scale = 0.5
data = {
"cells": PackedInt32Array(65515, 1, 4, 65516, 1, 4, 65517, 1, 4, 65518, 1, 4, 65519, 1, 4, 65520, 1, 4, 65521, 1, 4, 65522, 1, 4, 65523, 1, 4, 65524, 1, 4, 65525, 1, 4, 65526, 1, 4, 65527, 1, 4, 65528, 1, 3, 65529, 1, 4, 65530, 1, 4, 65531, 1, 4, 65532, 1, 4, 65533, 1, 4, 65534, 1, 4, 65535, 1, 4, 0, 1, 4, 1, 1, 4, 2, 1, 4, 3, 1, 4, 4, 1, 4, 5, 1, 4, 6, 1, 4, 7, 1, 4, 8, 1, 4, 9, 1, 4, 10, 1, 4, 65515, 0, 0, 65516, 0, 0, 65517, 0, 0, 65518, 0, 0, 65519, 0, 3, 65520, 0, 0, 65521, 0, 0, 65522, 0, 0, 65523, 0, 0, 65524, 0, 0, 65525, 0, 0, 65526, 0, 3, 65527, 0, 0, 65528, 0, 0, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 3, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 3, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 3, 9, 0, 0, 10, 0, 4, 196616, 0, 7, 262142, 0, 7, 196601, 0, 7, 196594, 0, 7, 196597, 0, 8, 196604, 0, 1441800, 131075, 0, 655368, 131078, 0, 8, 262150, 1, 8, 262146, 1, 1441800, 327676, 1, 655368, 327670, 1, 655368, 327664, 1, 1048584, 327660, 1, 8, 327662, 1, 7, 327668, 1, 1441799, 327674, 1, 655367, 262144, 1, 1048583, 131073, 0, 7, 196589, 0, 1048583, 65514, 1, 4, 65509, 1, 4, 65510, 1, 4, 65511, 1, 4, 65512, 1, 4, 65513, 1, 4, 65509, 0, 4, 65510, 0, 4, 65511, 0, 4, 65512, 0, 4, 65513, 0, 4, 65514, 0, 4, 1048583, 65535, 2, 1048582, 65535, 1, 1048581, 65535, 5, 1048584, 65535, 2, 1114110, 65535, 2, 1114109, 65535, 2, 1114108, 65535, 2, 1114107, 65535, 2, 917498, 65535, 2, 917497, 65535, 2, 65528, 65535, 4, 65527, 65535, 4, 65526, 65535, 3, 65525, 65535, 0, 65524, 65535, 0, 65523, 65535, 0, 65522, 65535, 0, 65521, 65535, 0, 65520, 65535, 0, 65519, 65535, 0, 131054, 65535, 1, 196589, 65535, 1, 262124, 65535, 1, 65518, 65535, 5, 65517, 65535, 5, 65516, 65535, 5, 131052, 65535, 5, 196588, 65535, 5, 131053, 65535, 5, 131051, 65535, 4, 131050, 65535, 4, 131049, 65535, 4, 131048, 65535, 4, 65515, 65535, 5, 65514, 65535, 5, 65513, 65535, 5, 65512, 65535, 5, 655332, 65535, 2, 655331, 65535, 2, 655330, 65535, 2, 65508, 1, 4, 65507, 1, 4, 65506, 1, 4, 65505, 1, 4, 65508, 0, 4, 65507, 0, 4, 65506, 0, 4, 65505, 0, 4, 327650, 0, 7, 327654, 0, 7, 327652, 0, 8, 786409, 65535, 655361, 851946, 65535, 655361, 786410, 65535, 655365, 917483, 65535, 655366, 917485, 65535, 655366, 917487, 65535, 655366, 1048561, 65535, 655366, 1441773, 65535, 655362, 1441772, 65535, 655362, 1441771, 65535, 655362, 1441770, 65535, 655362, 1441769, 65535, 655362, 1441768, 65535, 655362, 1441763, 65535, 655362, 1441762, 65535, 655362, 1376235, 65535, 655365, 1376234, 65535, 655365, 1376233, 65535, 655365, 1376236, 65535, 655365, 1048563, 65535, 655369, 1179635, 65535, 655369, 1310707, 65535, 655364, 1114117, 65535, 1, 1048585, 65535, 6, 1048586, 65535, 6, 1048587, 65535, 2, 1048588, 65535, 2, 1179652, 65535, 2, 655329, 65535, 2, 655328, 65535, 2, 655327, 65535, 1, 720862, 65535, 1, 786397, 65535, 1, 786396, 65535, 4, 720860, 65535, 5, 720861, 65535, 5, 655326, 65535, 5, 655325, 65535, 5, 655324, 65535, 5, 589795, 65535, 5, 589794, 65535, 5, 589793, 65535, 5, 589792, 65535, 5, 589791, 65535, 5, 524254, 65535, 5, 589790, 65535, 5, 589789, 65535, 5, 524255, 65535, 5, 524256, 65535, 5, 524257, 65535, 5, 524258, 65535, 5, 458721, 65535, 5, 458720, 65535, 5, 458719, 65535, 5, 393184, 65535, 5, 2228207, 65535, 0, 2228206, 65535, 0, 2293740, 65535, 2, 2293738, 65535, 2, 2293736, 65535, 2, 1441762, 0, 655362, 1441763, 0, 655362, 1441768, 0, 655362, 2293736, 0, 2, 786409, 0, 655361, 1376233, 0, 655365, 1441769, 0, 655362, 786410, 0, 655365, 851946, 0, 655361, 1376234, 0, 655365, 1441770, 0, 655362, 2293738, 0, 2, 917483, 0, 655366, 1376235, 0, 655365, 1441771, 0, 655362, 1376236, 0, 655365, 1441772, 0, 655362, 2293740, 0, 2, 917485, 0, 655366, 1441773, 0, 655362, 2228206, 0, 0, 917487, 0, 655366, 2228207, 0, 0, 2228208, 0, 0, 1048561, 0, 655366, 1048563, 0, 655369, 1179635, 0, 655369, 1310707, 0, 655364, 917497, 0, 2, 917498, 0, 2, 1114107, 0, 2, 1114108, 0, 2, 1114109, 0, 2, 1114110, 0, 2, 1179652, 0, 2, 1048581, 0, 5, 1114117, 0, 1, 1048582, 0, 1, 1048583, 0, 2, 1048584, 0, 2, 1048585, 0, 6, 1048586, 0, 6, 1048587, 0, 2, 2359272, 0, 7, 2359274, 0, 1441799, 2424815, 0, 655367, 2359276, 0, 655368, 1179646, 0, 655368, 1179644, 0, 655367, 1245188, 0, 655368, 1114120, 0, 8, 1114122, 0, 7, 1572851, 0, 7, 1114097, 0, 1441799, 1179633, 0, 1441799, 851932, 0, 655363, 786397, 0, 655363, 720862, 0, 655363, 655327, 0, 655363, 589792, 0, 655363, 589793, 0, 655363, 655330, 0, 655363, 589795, 0, 655363, 851938, 0, 655368, 851935, 0, 1048584, 1048540, 0, 1048583, 1507306, 0, 1048583, 1507309, 0, 7, 1507299, 0, 8, 2293745, 65535, 655360, 2359282, 65535, 655360, 2228209, 0, 655364, 2359282, 0, 655364, 1441758, 65535, 655366, 1441757, 65535, 655366, 2228208, 65535, 0, 1441774, 65535, 655366)
}
metadata/_editor_floor_ = Vector3(0, 1, -1)

[node name="Skeleton" parent="." instance=ExtResource("4_66qe0")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 50.1113, 44.51, -4.619)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, 1.29219e-08, -8.64625e-08, 0, 0.989016, 0.147809, 8.74228e-08, 0.147809, -0.989016, 36.936, 11.1179, -16.2849)
script = ExtResource("5_nc7n1")
skelic_node = NodePath("../Skeleton")

[node name="UI" parent="." instance=ExtResource("6_bvkyx")]

[node name="Platform" parent="." instance=ExtResource("8_3m07u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -152.373, 52.4862, -5)
target_path = NodePath("Marker3D")

[node name="Marker3D" type="Marker3D" parent="Platform"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 52, 0)

[node name="Platform2" parent="." instance=ExtResource("8_3m07u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -67.3734, 37.4862, -5)
target_path = NodePath("Marker3D")

[node name="Marker3D" type="Marker3D" parent="Platform2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 30, 0)

[node name="Portal" parent="." instance=ExtResource("9_m3vu1")]
transform = Transform3D(0.254214, 0, -0.967148, 0, 1, 0, 0.967148, 0, 0.254214, -81.9892, 92.0513, -4.54536)
visible = false

[node name="CahceShaders" type="Camera3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 35.9247, -50.8061)
current = true
script = ExtResource("10_rvd0w")

[node name="Whoosh" parent="." instance=ExtResource("10_mk51m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -128.244, 11.9233, -5.91137)
strength = 15.0

[node name="Pan" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.812348, 0.583173, 0, -0.583173, 0.812348, -170.896, 56.5302, -5.04386)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pan"]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_lmysw")
}

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pan"]
shape = SubResource("BoxShape3D_t7kv7")

[node name="pan" parent="Pan" instance=ExtResource("11_7grej")]

[connection signal="died" from="Skeleton" to="." method="_on_skeleton_died"]
[connection signal="body_entered" from="Portal" to="." method="_on_portal_body_entered"]
[connection signal="body_entered" from="Pan" to="." method="_on_pan_body_entered"]
